--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="/assets/img/_Button base.svg" alt="Logo OptimusTech" class="cabecalho__imagem">
+        <img src="https://www.imagemhost.com.br/images/2022/07/01/Button-base.png" alt="Logo OptimusTech" class="cabecalho__imagem">
         
         <nav class="cabecalho__menu">
             <ul class="cabecalho__lista">
