--- a/index.html
+++ b/index.html
@@ -63,10 +63,78 @@
                 </ul>
             </div>
         </section>
+
+        <section class="vagas">
+            <div class="vagas__container">
+                <span class="principal__sobre vagas__fundo">Vagas abertas!</span>
+                <h2 class="principal__titulo segundo">Estamos procurando por talentos</h2>
+                <p class="principal__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro</p>
+
+                <img src="https://www.imagemhost.com.br/images/2022/07/01/Image.png" alt="pessoas em uma sala de reunião" class="vagas__imagem">
+            </div>
+
+            <div class="vaga__painel">
+                <span class="vaga__titulo">Design</span>
+                <div class="vaga__aberta">
+                    <span class="vaga__subtitulo">Product Designer</span>
+                    <div class="vaga__informacoes">
+                        <span class="vaga__sobre">Full-time</span>
+                        <span class="vaga__sobre">Faixa-salarial: R$7.000</span>
+                    </div>
+                </div>
+
+                <div class="vaga__aberta secundaria">
+                    <span class="vaga__subtitulo">UX Designer</span>
+                    <div class="vaga__informacoes">
+                        <span class="vaga__sobre">Full-time</span>
+                        <span class="vaga__sobre">Faixa-salarial: R$6.000</span>
+                    </div>
+                </div>
+
+                <span class="vaga__titulo">Desenvolvimento de software</span>
+                <div class="vaga__aberta">
+                    <span class="vaga__subtitulo">Desenvolvedor(a) IOS</span>
+                    <div class="vaga__informacoes">
+                        <span class="vaga__sobre">Full-time</span>
+                        <span class="vaga__sobre">Faixa-salarial: R$8.000</span>
+                    </div>
+                </div>
+
+                <div class="vaga__aberta">
+                    <span class="vaga__subtitulo">Desenvolvedor(a) Front-end</span>
+                    <div class="vaga__informacoes">
+                        <span class="vaga__sobre">Full-time</span>
+                        <span class="vaga__sobre">Faixa-salarial: R$7.000</span>
+                    </div>
+                </div>
+
+                <div class="vaga__aberta secundaria">
+                    <span class="vaga__subtitulo">Desenvolvedor(a) Back-end</span>
+                    <div class="vaga__informacoes">
+                        <span class="vaga__sobre">Full-time</span>
+                        <span class="vaga__sobre">Faixa-salarial: R$8.000</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="depoimentos">
+            <span class="principal__sobre depoimentos__subtitulo">Veja o que nossos colaboradores falam sobre nós</span>
+            <h2 class="depoimentos__titulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+            <img src="https://www.imagemhost.com.br/images/2022/07/01/Avatar.png" alt="Júlia Castro" class="depoimentos__imagem">
+            <span class="depoimentos__nome">Júlia Castro</span>
+            <span class="depoimentos__funcao">Desenvolvedora Web</span>
+        </section>
     </main>
 
     <footer>
-
+        <h3 class="principal__titulo segundo">Acompanhe nossas oportunidades</h3>
+        <p class="rodape__subtitulo">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <form>
+            <input type="text" name="" id="" placeholder="Seu e-mail" class="rodape__email" required>
+            <button type="submit" class="rodape__botao">Cadastrar</button>
+        </form>
+        <span class="rodape__copy">&copy; 2022 OptimusTech. Todos os direitos reservados.</span>
     </footer>
 </body>
 </html>
