--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <span class="vaga__sobre">Full-time</span>
                         <span class="vaga__sobre">Faixa-salarial: R$7.000</span>
                     </div>
+                    <button class="vaga__enviar">Enviar currículo</button>
                 </div>
 
                 <div class="vaga__aberta secundaria">
@@ -89,6 +90,7 @@
                         <span class="vaga__sobre">Full-time</span>
                         <span class="vaga__sobre">Faixa-salarial: R$6.000</span>
                     </div>
+                    <button class="vaga__enviar">Enviar currículo</button>
                 </div>
 
                 <span class="vaga__titulo">Desenvolvimento de software</span>
@@ -98,6 +100,7 @@
                         <span class="vaga__sobre">Full-time</span>
                         <span class="vaga__sobre">Faixa-salarial: R$8.000</span>
                     </div>
+                    <button class="vaga__enviar">Enviar currículo</button>
                 </div>
 
                 <div class="vaga__aberta">
@@ -106,6 +109,7 @@
                         <span class="vaga__sobre">Full-time</span>
                         <span class="vaga__sobre">Faixa-salarial: R$7.000</span>
                     </div>
+                    <button class="vaga__enviar">Enviar currículo</button>
                 </div>
 
                 <div class="vaga__aberta secundaria">
@@ -114,6 +118,7 @@
                         <span class="vaga__sobre">Full-time</span>
                         <span class="vaga__sobre">Faixa-salarial: R$8.000</span>
                     </div>
+                    <button class="vaga__enviar">Enviar currículo</button>
                 </div>
             </div>
         </section>
